--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=admin
+spring.data.mongodb.database=ecommerce
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
